--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: setup python
-        uses: actions/setup-python@2
+        uses: actions/setup-python@v2
         with:
           python-version: 3.8
       - name: execute main.py
