--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
         with:
           python-version: 3.8
       - name: execute main.py
+        working-directory: server
         run: |
           chmod +x ./server/main.py
           python -m pip install -r ./requirements.txt
