--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,9 @@ jobs:
       - name: execute main.py
         working-directory: server
         run: |
-          chmod +x ./server/main.py
+          chmod +x main.py
           python -m pip install -r ./requirements.txt
-          python ./server/main.py
+          python main.py
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
