--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,11 +47,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: install pip dependencies
+        run: |
+          python -m pip install -r ./requirements.txt
       - name: execute main.py
         working-directory: server
         run: |
           chmod +x main.py
-          python -m pip install -r ./requirements.txt
           python main.py
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
